# crewai-audio-quickstart

./: .env.example  .gitignore  README.md  audio-quickstart-ui-49d647deef9526fa.js  audio-quickstart-ui-49d647deef9526fa_bg.wasm  index.html  pyproject.toml
client/: ask.py
scripts/: make_sample_audio.sh  release-ui.sh
src/audio_quickstart/: agents.py  crew.py  data.py  flow.py  forms.py  main.py  tools.py
src/audio_quickstart/config/: agents.yaml  tasks.yaml
tests/: conftest.py  test_e2e_ui.py  test_integration_deployment.py  test_unit_core.py
ui/: Cargo.toml  README.md  Trunk.toml  index.html
ui/src/: main.rs
