[project]
name = "audio_quickstart"
version = "0.1.0"
description = "Reference conversational field assistant: audio -> transcription -> deployed flow (router + data agent + form agent, session state across kickoffs)"
authors = [{ name = "CrewAI Field Engineering" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai==1.15.2",
]

[project.scripts]
kickoff = "audio_quickstart.main:kickoff"
plot = "audio_quickstart.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
