[project]
name = "audio_quickstart"
version = "0.1.0"
description = "Reference conversational field assistant: audio -> transcription -> deployed flow (router + data agent + form agent, session state across kickoffs)"
authors = [{ name = "CrewAI Field Engineering" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai==1.15.2",
]

[project.scripts]
kickoff = "audio_quickstart.main:kickoff"
plot = "audio_quickstart.main:plot"

[dependency-groups]
# Test stack — installed by `uv sync` (dev group is on by default).
# Playwright also needs a one-time browser download: uv run playwright install firefox
dev = [
    "pytest>=8.0",
    "playwright>=1.45",
    "pytest-playwright>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Firefox by default: it has the strictest MediaRecorder behavior of the
# majors (default container audio/ogg) — if the mic path works there, it
# works everywhere we care about.
addopts = "--browser firefox"
markers = [
    "credentialed: needs the git-ignored .env at the repo root (deployment URL/token; see tests/conftest.py) — run `uv run pytest -m \"not credentialed\"` to skip",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

[tool.uv]
# GHSA-xf7x-x43h-rpqh: json-repair < 0.60.1 has an unbounded-CPU DoS on
# circular JSON Schema $refs. crewai 1.15.2 pins ~=0.25.2, so force the
# patched line until crewai lifts its pin. API surface used by crewai
# (repair_json / loads) is unchanged across this range.
override-dependencies = ["json-repair>=0.60.1"]
