[package]
name = "audio-quickstart-ui"
version = "0.1.2"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
uuid = { version = "1", features = ["v4", "js"] }
web-sys = { version = "0.3", features = [
    "Window", "Document", "Storage", "Navigator",
    "MediaDevices", "MediaStream", "MediaStreamConstraints",
    "MediaRecorder", "MediaRecorderOptions", "BlobEvent",
    "Blob", "BlobPropertyBag", "FormData",
    "SpeechSynthesis", "SpeechSynthesisUtterance",
    "MediaStreamTrack", "console",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
